Add LibSharedCxx library

--- a/.gitignore
+++ b/.gitignore
@@ -634,3 +634,5 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/rust,cmake,visualstudiocode,visualstudio,python,xcode
+
+.DS_Store
