--- a/environment.yml
+++ b/environment.yml
@@ -2,20 +2,18 @@ name: ./.conda
 channels:
   - conda-forge
 dependencies:
-  - bzip2=1.0.8=h93a5062_5
-  - ca-certificates=2024.2.2=hf0a4a13_0
-  - libexpat=2.6.2=hebf3989_0
-  - libffi=3.4.2=h3422bc3_5
-  - libsqlite=3.45.2=h091b4b1_0
-  - libzlib=1.2.13=h53f4e23_5
-  - ncurses=6.4.20240210=h078ce10_0
-  - openssl=3.2.1=h0d3ecfb_1
-  - pip=24.0=pyhd8ed1ab_0
-  - python=3.12.2=hdf0ec26_0_cpython
-  - readline=8.2=h92ec313_1
-  - setuptools=69.2.0=pyhd8ed1ab_0
-  - tk=8.6.13=h5083fa2_1
-  - tzdata=2024a=h0c530f3_0
-  - wheel=0.42.0=pyhd8ed1ab_0
-  - xz=5.2.6=h57fd34a_0
+  - bzip2=1.0.8
+  - ca-certificates=2024.2.2
+  - libexpat=2.6.2
+  - libffi=3.4.2
+  - libsqlite=3.45.2
+  - libzlib=1.2.13
+  - openssl=3.2.1
+  - pip=24.0
+  - python=3.12.2
+  - setuptools=69.2.0
+  - tk=8.6.13
+  - tzdata=2024a
+  - wheel=0.42.0
+  - xz=5.2.6
 prefix: ./.conda
